# labelmerge

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  auto_assign.yml  release-drafter.yml
.github/workflows/: assign_reviewers.yml  bump_version.yml  deploy.yml  deploy_docker.yml  quality.yml  release.yml
dbsc/: run.py
docs/: conf.py  index.md
docs/contributing/: contributing.md
docs/getting_started/: docker.md  installation.md  singularity.md
docs/usage/: cli.md  faq.md
docs/workflow/: workflow.md
labelmerge/: pipeline_description.json  run.py
labelmerge/config/: snakebids.yml
labelmerge/resources/zona_bb_subcortex/: convexHull_roi.py
labelmerge/workflow/: Snakefile
labelmerge/workflow/rules/: label_harmonization.smk
labelmerge/workflow/scripts/: assemble_priority.py  label_split.py  labelmerge.py
